--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iview": "^2.14.2",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "lib-flexible": "^0.3.2",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
@@ -45,6 +46,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
